<resources>
    <string name="app_name">Kbingo</string>
    <string name="realizar_sorteio_submenu_title">Realizar Sorteio</string>
    <string name="realizar_sorteio_title">Sortear Pedras</string>
    <string name="sorteio_cartela_title">Sortear Cartela</string>
    <string name="visualizar_cartelas_title">Visualizar Cartela</string>
    <string name="conferir_cartelas_title">Conferir Cartela</string>
    <string name="cartelas_ganhadoras_title">Cartelas Ganhadoras</string>
    <string name="dialog_negative">Cancelar</string>
    <string name="dialog_confirmative">OK</string>

    <string name="dialog_sair_app_title">Deseja realmente sair do Kbingo?</string>
    <string name="dialog_sair_app_positive">Sair</string>

    <!--Realizar sorteio-->
    <string name="bt_sortear_pedra">Sortear\nPedra</string>
    <string name="item_novo_sorteio">Novo Sorteio</string>
    <string name="item_alterar_tipo_sorteio">Alterar Tipo de Sorteio</string>
    <string name="sorteio_fim">Fim do\nSorteio</string>
    <string name="dialog_novo_sorteio_title">Realizar novo sorteio?</string>
    <string name="dialog_novo_sorteio_positive">Novo Sorteio</string>
    <string name="dialog_novo_sorteio_tipo_sorteio_message">Para alterar o tipo de sorteio um novo sorteio deve ser iniciado.</string>
    <string name="dialog_tipo_sorteio_title">Escolha o tipo de sorteio</string>
    <string name="item_confere_cartelas_content_description">Imagem de cartela</string>
    <string name="item_confere_cartelas_badge_texto_plus">+9</string>

    <!--Sorteio Cartela-->
    <string name="bt_sorteio_cartela">Sortear\nCartela</string>
    <string name="filtro_cartelas_ganhadoras">Filtrar por cartelas ganhadoras</string>
    <string name="et_sorteio_cartela_numero_hint">Número da cartela</string>
    <string name="titulo_cartelas_sorteaveis">Cartelas Sorteáveis:</string>
    <string name="todas_cartelas_sorteaveis">Todas as cartelas</string>
    <string name="item_filtrar_cartelas_sorteaveis">Filtrar Cartelas Sorteáveis</string>
    <string name="item_limpar_filtro_cartelas">Limpar Filtro de Cartelas</string>
    <string name="dialog_filtrar_cartelas_title">Filtrar cartelas sorteáveis</string>
    <string name="dialog_limpar_filtro_cartelas_title">Limpar filtro de cartelas sorteáveis?</string>
    <string name="dialog_limpar_filtro_cartelas_positive">Limpar Filtro</string>

    <!--Conferir cartela-->
    <string name="snack_sem_cartela_ganhadora">Ainda não há nenhuma cartela ganhadora</string>
    <string name="list_item_confere_outra_cartela">Conferir outra cartela</string>
    <string name="busca_cartela_numero">Buscar número de cartela</string>

    <!--Visualizar cartela-->
    <string name="et_numero_cartela_hint">Número da Cartela</string>
    <string name="snack_cartela_maxima">O maior número de cartela cadastrado é</string>
    <string name="item_exportar_cartelas">Exportar Cartelas</string>
    <string name="dialog_exportar_cartelas_title">Exportar Cartelas</string>
    <string name="dialog_exportar_cartelas_positive">Exportar Cartelas</string>
    <string name="dialog_exportar_cartelas_content_text">Informe os números das cartelas inicial e final para exportação</string>
    <string name="dialog_exportar_cartelas_separator_text">-</string>
    <string name="dialog_exportar_cartelas_et_inicial_hint">Cartela Inicial</string>
    <string name="dialog_exportar_cartelas_et_final_hint">Cartela Final</string>
    <string name="snack_permissao_escrita_nao_concedida">Não é possível exportar as cartelas sem a permissão de escrita</string>
    <string name="snack_inicio_exportar_cartelas">Cartelas sendo exportadas\nIsso pode levar algum tempo</string>
    <string name="toast_fim_exportar_cartelas">Cartelas exportadas com sucesso para a pasta de Downloads</string>
    <string name="validar_cartelas_erro">O número da Cartela Inicial não pode ser superior ao da Cartela Final</string>
</resources>
