...
        android:layout_marginTop="@dimen/dialog_exportar_cartelas_content_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_exportar_cartelas_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_dialog_exportar_cartelas_inicial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/dialog_exportar_cartelas_et_inicial_hint" />
    </android.support.design.widget.TextInputLayout>

...
        android:layout_marginTop="@dimen/dialog_exportar_cartelas_content_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_exportar_cartelas_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_dialog_exportar_cartelas_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/dialog_exportar_cartelas_et_final_hint" />
    </android.support.design.widget.TextInputLayout>

...
