package br.com.boa50.kbingo;

import android.content.Intent;
import android.content.pm.ActivityInfo;
import android.support.test.InstrumentationRegistry;
import android.support.test.espresso.Espresso;
import android.support.test.espresso.contrib.RecyclerViewActions;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;

import com.google.common.collect.Lists;

import org.junit.AfterClass;
import org.junit.Before;
import org.junit.BeforeClass;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.util.ArrayList;
import java.util.Locale;

import br.com.boa50.kbingo.conferecartelas.ConfereCartelasActivity;
import br.com.boa50.kbingo.data.AppDatabase;
import br.com.boa50.kbingo.data.FakeAppRepository;
import br.com.boa50.kbingo.data.dto.TipoSorteioDTO;
import br.com.boa50.kbingo.data.entity.Letra;
import br.com.boa50.kbingo.data.entity.Pedra;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.pressImeActionButton;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.assertion.ViewAssertions.doesNotExist;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static br.com.boa50.kbingo.Constant.FORMAT_PEDRA;
import static br.com.boa50.kbingo.Constant.QTDE_PEDRAS_LETRA;
import static br.com.boa50.kbingo.CustomGets.getButtonText;
import static br.com.boa50.kbingo.CustomMatchers.isFocused;
import static br.com.boa50.kbingo.CustomMatchers.withBackgroundDrawable;

@RunWith(AndroidJUnit4.class)
public class ConfereCartelasEspressoTest {
    private static FakeAppRepository repository;
    private static ArrayList<Pedra> pedrasMock;
    private static ArrayList<Integer> cartelasGanhadorasMock;


    @Rule
    public ActivityTestRule<ConfereCartelasActivity> mActivityRule =
            new ActivityTestRule<>(ConfereCartelasActivity.class, false, false);

    @BeforeClass
    public static void setup() {
        repository = CustomProcedures.initializeFakeDatabase();
        Letra[] letras = new Letra[] {
                new Letra(1, "K"),
                new Letra(2, "I"),
                new Letra(3, "N"),
                new Letra(4, "K"),
                new Letra(5, "A")
        };

        pedrasMock = new ArrayList<>();
        for (int i = 1; i <= QTDE_PEDRAS_LETRA*letras.length; i++) {
            int letraId = letras[(i-1)/ QTDE_PEDRAS_LETRA].getId();

            pedrasMock.add(new Pedra(
                    i,
                    letraId,
                    String.format(Locale.ENGLISH, FORMAT_PEDRA, i)
            ));
        }

        pedrasMock.get(14 - 1).setSorteada(true);

        cartelasGanhadorasMock = repository.getIdsCartelasGanhadoras();
    }

    @Before
    public void setupTest() {
        Intent intent = new Intent();
        intent.putExtra(Constant.EXTRA_PEDRAS, pedrasMock);
        intent.putExtra(Constant.EXTRA_CARTELAS_GANHADORAS, true);
        mActivityRule.launchActivity(intent);
    }

    @AfterClass
    public static void tearDown() {
        repository.getDb().close();
    }

    @Test
    public void pedraSorteada_aparecerFundoVerde() {
        onView(withId(R.id.rv_cartelas_ganhadoras))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));

        onView(withId(R.id.et_numero_cartela))
                .perform(replaceText("0001"));
        onView(withId(R.id.et_numero_cartela))
                .perform(pressImeActionButton());

        try {
            Thread.sleep(50);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        onView(withText("14"))
                .check(matches(withBackgroundDrawable(
                        mActivityRule.getActivity().getResources()
                                .getDrawable(R.drawable.pedrasorteada_customborder))));

        onView(withText("28"))
                .check(matches(withBackgroundDrawable(
                        mActivityRule.getActivity().getResources()
                                .getDrawable(R.drawable.customborder))));
    }

//    @Test
//    public void receberCartelaGanhadora_apresentarTodasGanhadoras() {
//        onView(withText(R.string.list_item_confere_outra_cartela))
//                .check(matches(isDisplayed()));
//
//        for (int i = 0; i < cartelasGanhadorasMock.size(); i++) {
//            onView(withText(cartelasGanhadorasMock.get(i)))
//                    .check(matches(isDisplayed()));
//        }
//
//        onView(withText(mActivityRule.getActivity().getTitle().toString()))
//                .check(matches(withText(
//                        mActivityRule.getActivity().getString(R.string.cartelas_ganhadoras_title) +
//                                " - " + cartelasGanhadorasMock.size() + " Cartelas"
//                )));
//    }
//
//    @Test
//    public void apertarCartelaGanhadora_apresentarCartelaCorreta() {
//        int i = 1;
//        onView(withText(cartelasGanhadorasMock.get(i)))
//                .perform(click());
//
//        onView(withId(R.id.et_numero_cartela))
//                .check(matches(withText(cartelasGanhadorasMock.get(i))));
//    }
//
//    @Test
//    public void apertarCartelaGanhadora_voltarTelaCartelas() {
//        onView(withText(cartelasGanhadorasMock.get(0)))
//                .perform(click());
//
//        pressBack();
//
//        onView(withText(mActivityRule.getActivity().getTitle().toString()))
//                .check(matches(withText(
//                        mActivityRule.getActivity().getString(R.string.cartelas_ganhadoras_title) +
//                                " - " + cartelasGanhadorasMock.size() + " Cartelas"
//                )));
//        onView(withText(cartelasGanhadorasMock.get(cartelasGanhadorasMock.size() - 1)))
//                .check(matches(isDisplayed()));
//    }
//
//    @Test
//    public void verificarMenuDisponivel() {
//        onView(withId(R.id.item_busca))
//                .check(matches(isDisplayed()));
//
//        onView(withId(R.id.rv_cartelas_ganhadoras))
//                .perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));
//        onView(withId(R.id.item_busca))
//                .check(doesNotExist());
//    }
//
//    @Test
//    public void filtrarCartelas_selecinarCartela_conferirCartela() {
//        String cartelaFiltrada = "0001";
//
//        filtrarCartelas(cartelaFiltrada);
//
//        onView(withId(R.id.rv_cartelas_ganhadoras))
//                .perform(RecyclerViewActions.actionOnItemAtPosition(1, click()));
//
//        onView(withId(R.id.et_numero_cartela))
//                .check(matches(isDisplayed()));
//        onView(withText(cartelaFiltrada))
//                .check(matches(isDisplayed()));
//        onView(withText("14"))
//                .check(matches(isDisplayed()));
//    }
//
//    @Test
//    public void filtrarCartelas_selecionarCartela_voltar_todasCartelasApresentadas() {
//        filtrarCartelas("1");
//
//        onView(withId(R.id.rv_cartelas_ganhadoras))
//                .perform(RecyclerViewActions.actionOnItemAtPosition(1, click()));
//
//        pressBack();
//
//        onView(withText(cartelasGanhadorasMock.get(cartelasGanhadorasMock.size()-1)))
//                .check(matches(isDisplayed()));
//    }
//
//    @Test
//    public void filtrarCartelas_mudarOrientacao_manterInformacoes() {
//        String textoFiltro = "0050";
//        filtrarCartelas(textoFiltro);
//
//        mActivityRule.getActivity().setRequestedOrientation(ActivityInfo.SCREEN_ORIENTATION_LANDSCAPE);
//
//        onView(withText(textoFiltro))
//                .check(matches(isDisplayed()));
//        onView(withText(textoFiltro))
//                .check(matches(isFocused()));
//    }
//
//    private void filtrarCartelas(String textoFiltro) {
//        onView(withId(R.id.item_busca))
//                .perform(click());
//        onView(withId(android.support.design.R.id.search_src_text))
//                .perform(typeText(textoFiltro));
//    }
}
